WindowsForms_MoPhongKhoanNoMin/WindowsForms_MoPhongKhoanNoMin/LiteCAD/API/Litecad.vb


  Public Declare Function TinPtypeGetNext Lib "Litecad.dll" Alias "lcTinPtypeGetNext" (ByVal hTin As Integer, ByVal hPtype As Integer) As Integer

  Public Declare Unicode Function TinPtypeGetByName Lib "Litecad.dll" Alias "lcTinPtypeGetByName" (ByVal hTin As Integer, ByVal szName As String) As Integer

  Public Declare Function TinPtypeDialog Lib "Litecad.dll" Alias "lcTinPtypeDialog" (ByVal hTin As Integer, ByVal hWnd As Integer, ByVal bReadOnly As Integer) As Integer

  Public Declare Function TinPointGetFirst Lib "Litecad.dll" Alias "lcTinPointGetFirst" (ByVal hTin As Integer) As Integer

  Public Declare Function TinPointGetNext Lib "Litecad.dll" Alias "lcTinPointGetNext" (ByVal hTin As Integer, ByVal hPoint As Integer) As Integer

  Public Declare Function TinPointGetByPos Lib "Litecad.dll" Alias "lcTinPointGetByPos" (ByVal hTin As Integer, ByVal X As Double, ByVal Y As Double, ByVal Delta As Double) As Integer

  Public Declare Function TinTrianGetFirst Lib "Litecad.dll" Alias "lcTinTrianGetFirst" (ByVal hTin As Integer) As Integer

  Public Declare Function TinTrianGetNext Lib "Litecad.dll" Alias "lcTinTrianGetNext" (ByVal hTin As Integer, ByVal hTrian As Integer) As Integer

  Public Declare Function TinTrianGetByPos Lib "Litecad.dll" Alias "lcTinTrianGetByPos" (ByVal hTin As Integer, ByVal X As Double, ByVal Y As Double) As Integer

  Public Declare Function CreateWindow Lib "Litecad.dll" Alias "lcCreateWindow" (ByVal hWndParent As Integer, ByVal Style As Integer, ByVal Left As Integer, ByVal Top As Integer, ByVal Width As Integer, ByVal Height As Integer) As Integer

  Public Declare Function DeleteWindow Lib "Litecad.dll" Alias "lcDeleteWindow" (ByVal hLcWnd As Integer) As Integer

  Public Declare Function WndResize Lib "Litecad.dll" Alias "lcWndResize" (ByVal hLcWnd As Integer, ByVal Left As Integer, ByVal Top As Integer, ByVal Width As Integer, ByVal Height As Integer) As Integer

  Public Declare Function WndSelectView Lib "Litecad.dll" Alias "lcWndSelectView" (ByVal hLcWnd As Integer, ByVal hView As Integer) As Integer

  Public Declare Function WndZoomRect Lib "Litecad.dll" Alias "lcWndZoomRect" (ByVal hLcWnd As Integer, ByVal Left As Double, ByVal Bottom As Double, ByVal Right As Double, ByVal Top As Double) As Integer

  Public Declare Function WndZoomScale Lib "Litecad.dll" Alias "lcWndZoomScale" (ByVal hLcWnd As Integer, ByVal Scal As Double) As Integer

  Public Declare Function WndZoomMove Lib "Litecad.dll" Alias "lcWndZoomMove" (ByVal hLcWnd As Integer, ByVal DX As Double, ByVal DY As Double) As Integer

  Public Declare Function WndRedraw Lib "Litecad.dll" Alias "lcWndRedraw" (ByVal hLcWnd As Integer) As Integer

  Public Declare Function WndSetFocus Lib "Litecad.dll" Alias "lcWndSetFocus" (ByVal hLcWnd As Integer) As Integer

  Public Declare Function WndExeCommand Lib "Litecad.dll" Alias "lcWndExeCommand" (ByVal hLcWnd As Integer, ByVal Command As Integer, ByVal CmdParam As Integer) As Integer

  Public Declare Function WndCoordFromDrw Lib "Litecad.dll" Alias "lcWndCoordFromDrw" (ByVal hLcWnd As Integer, ByVal Xdrw As Double, ByVal Ydrw As Double, ByRef pXwin As Integer, ByRef pYwin As Integer) As Integer

  Public Declare Function WndCoordToDrw Lib "Litecad.dll" Alias "lcWndCoordToDrw" (ByVal hLcWnd As Integer, ByVal Xwin As Integer, ByVal Ywin As Integer, ByRef pXdrw As Double, ByRef pYdrw As Double) As Integer

  Public Declare Function WndGetCursorCoord Lib "Litecad.dll" Alias "lcWndGetCursorCoord" (ByVal hLcWnd As Integer, ByRef pXwin As Integer, ByRef pYwin As Integer, ByRef pXdrw As Double, ByRef pYdrw As Double) As Integer

  Public Declare Function WndGetEntByPoint Lib "Litecad.dll" Alias "lcWndGetEntByPoint" (ByVal hLcWnd As Integer, ByVal Xwin As Integer, ByVal Ywin As Integer) As Integer

  Public Declare Function WndSetCmdwin Lib "Litecad.dll" Alias "lcWndSetCmdwin" (ByVal hLcWnd As Integer, ByVal hCmdLine As Integer) As Integer

  Public Declare Function WndSetPropwin Lib "Litecad.dll" Alias "lcWndSetPropwin" (ByVal hLcWnd As Integer, ByVal hPropWnd As Integer) As Integer

  Public Declare Function WndStopCommand Lib "Litecad.dll" Alias "lcWndStopCommand" (ByVal hLcWnd As Integer) As Integer

  Public Declare Unicode Function WndGetPoint Lib "Litecad.dll" Alias "lcWndGetPoint" (ByVal hLcWnd As Integer, ByVal szPrompt As String, ByVal SnapMode As Integer, ByVal Index As Integer, ByRef pX As Double, ByRef pY As Double) As Integer

  Public Declare Function WndGetPointBuf Lib "Litecad.dll" Alias "lcWndGetPointBuf" (ByVal hLcWnd As Integer, ByVal Index As Integer, ByRef pX As Double, ByRef pY As Double) As Integer

  Public Declare Function CoordDrwToWnd Lib "Litecad.dll" Alias "lcCoordDrwToWnd" (ByVal hLcWnd As Integer, ByVal Xdrw As Double, ByVal Ydrw As Double, ByRef pXwin As Integer, ByRef pYwin As Integer) As Integer

  Public Declare Function CoordWndToDrw Lib "Litecad.dll" Alias "lcCoordWndToDrw" (ByVal hLcWnd As Integer, ByVal Xwin As Integer, ByVal Ywin As Integer, ByRef pXdrw As Double, ByRef pYdrw As Double) As Integer

  Public Declare Unicode Function ColorIsRGB Lib "Litecad.dll" Alias "lcColorIsRGB" (ByVal szColor As String) As Integer

  Public Declare Unicode Function ColorGetRed Lib "Litecad.dll" Alias "lcColorGetRed" (ByVal szColor As String) As Integer

  Public Declare Unicode Function ColorGetGreen Lib "Litecad.dll" Alias "lcColorGetGreen" (ByVal szColor As String) As Integer

  Public Declare Unicode Function ColorGetBlue Lib "Litecad.dll" Alias "lcColorGetBlue" (ByVal szColor As String) As Integer

  Public Declare Unicode Function ColorGetIndex Lib "Litecad.dll" Alias "lcColorGetIndex" (ByVal szColor As String) As Integer

  Public Declare Unicode Function ColorToVal Lib "Litecad.dll" Alias "lcColorToVal" (ByVal szColor As String, ByRef pbRGB As Integer, ByRef pIndex As Integer, ByRef pR As Integer, ByRef pG As Integer, ByRef pB As Integer) As Integer

  Public Declare Function ColorSetPalette Lib "Litecad.dll" Alias "lcColorSetPalette" (ByVal Index As Integer, ByVal R As Integer, ByVal G As Integer, ByVal B As Integer) As Integer

  Public Declare Function ColorGetPalette Lib "Litecad.dll" Alias "lcColorGetPalette" (ByVal Index As Integer, ByRef pR As Integer, ByRef pG As Integer, ByRef pB As Integer) As Integer

  Public Declare Function CreateCmdwin Lib "Litecad.dll" Alias "lcCreateCmdwin" (ByVal hWndParent As Integer, ByVal Left As Integer, ByVal Top As Integer, ByVal Width As Integer, ByVal Height As Integer) As Integer

  Public Declare Function CmdwinResize Lib "Litecad.dll" Alias "lcCmdwinResize" (ByVal hCmdLine As Integer, ByVal Left As Integer, ByVal Top As Integer, ByVal Width As Integer, ByVal Height As Integer) As Integer

  Public Declare Function CmdwinUpdate Lib "Litecad.dll" Alias "lcCmdwinUpdate" (ByVal hCmdLine As Integer) As Integer

  Public Declare Function CreatePropwin Lib "Litecad.dll" Alias "lcCreatePropwin" (ByVal hWndParent As Integer, ByVal Left As Integer, ByVal Top As Integer, ByVal Width As Integer, ByVal Height As Integer) As Integer

  Public Declare Function PropwinResize Lib "Litecad.dll" Alias "lcPropwinResize" (ByVal hPropWnd As Integer, ByVal Left As Integer, ByVal Top As Integer, ByVal Width As Integer, ByVal Height As Integer) As Integer

  Public Declare Function PropwinUpdate Lib "Litecad.dll" Alias "lcPropwinUpdate" (ByVal hPropWnd As Integer, ByVal bSelChanged As Integer) As Integer

  Public Declare Function GetErrorCode Lib "Litecad.dll" Alias "lcGetErrorCode" () As Integer

  Public Declare Unicode Function GetErrorStr Lib "Litecad.dll" Alias "lcGetErrorStr" () As String

  Public Declare Unicode Function ExtractPreview Lib "Litecad.dll" Alias "lcExtractPreview" (ByVal szFileName As String, ByVal hGlob As Integer, ByVal MaxSize As Integer) As Integer

  Public Declare Unicode Function ExtractFileInfo Lib "Litecad.dll" Alias "lcExtractFileInfo" (ByVal szFileName As String, ByVal szGuid As Integer, ByVal szComment As Integer, ByRef pInt0 As Integer, ByRef pInt1 As Integer) As Integer

  Public Declare Function FilletSetLines Lib "Litecad.dll" Alias "lcFilletSetLines" (ByVal L1x0 As Double, ByVal L1y0 As Double, ByVal L1x1 As Double, ByVal L1y1 As Double, ByVal L2x0 As Double, ByVal L2y0 As Double, ByVal L2x1 As Double, ByVal L2y1 As Double) As Integer

  Public Declare Function Fillet Lib "Litecad.dll" Alias "lcFillet" (ByVal Rad As Double, ByVal Bis As Double, ByVal Tang As Double) As Integer

  Public Declare Function FilletGetPoint Lib "Litecad.dll" Alias "lcFilletGetPoint" (ByVal iPnt As Integer, ByRef pX As Double, ByRef pY As Double) As Integer

  Public Declare Unicode Function DgGetFileName Lib "Litecad.dll" Alias "lcDgGetFileName" (ByVal hWnd As Integer, ByVal Mode As Integer) As String

  Public Declare Unicode Function DgGetValue Lib "Litecad.dll" Alias "lcDgGetValue" (ByVal hWnd As Integer, ByVal Lef As Integer, ByVal Top As Integer, ByVal szTitle As String, ByVal szPrompt As String, ByVal szValue As String) As String

  Public Declare Unicode Function DgGetValue2 Lib "Litecad.dll" Alias "lcDgGetValue2" (ByVal hWnd As Integer, ByVal Lef As Integer, ByVal Top As Integer, ByVal szTitle As String, ByVal szPrompt As String, ByVal szValue As Integer, ByVal MaxChar As Integer) As Integer

  Public Declare Unicode Function PlugGetOption Lib "Litecad.dll" Alias "lcPlugGetOption" (ByVal szFileName As String, ByVal szKey As String) As String

  Public Declare Unicode Function PlugSetOption Lib "Litecad.dll" Alias "lcPlugSetOption" (ByVal szFileName As String, ByVal szKey As String, ByVal szValue As String, ByVal bSave As Integer) As Integer

  Public Declare Sub GetPolarPoint Lib "Litecad.dll" Alias "lcGetPolarPoint" (ByVal X As Double, ByVal Y As Double, ByVal Ang As Double, ByVal Dist As Double, ByRef pX As Double, ByRef pY As Double)

  Public Declare Function GetClientSize Lib "Litecad.dll" Alias "lcGetClientSize" (ByVal hWnd As Integer, ByRef pWidth As Integer, ByRef pHeight As Integer) As Integer

  Public Declare Sub TextOut Lib "Litecad.dll" Alias "lcTextOut" (ByVal hDC As Integer, ByVal x As Integer, ByVal y As Integer, ByVal szText As String, ByVal ColorRGB As Integer)

  Public Declare Unicode Function CreateCommand Lib "Litecad.dll" Alias "lcCreateCommand" (ByVal hLcWnd As Integer, ByVal Id As Integer, ByVal szName As String, ByVal bNeedSel As Integer) As Integer

  Public Declare Function CmdExit Lib "Litecad.dll" Alias "lcCmdExit" () As Integer

  Public Declare Unicode Function CmdPrompt Lib "Litecad.dll" Alias "lcCmdPrompt" (ByVal hCmd As Integer, ByVal szText As String) As Integer

  Public Declare Function CmdGetEntByPoint Lib "Litecad.dll" Alias "lcCmdGetEntByPoint" (ByVal hCmd As Integer, ByVal Xwnd As Integer, ByVal Ywnd As Integer) As Integer

  Public Declare Function CmdSelectEnt Lib "Litecad.dll" Alias "lcCmdSelectEnt" (ByVal hCmd As Integer, ByVal hEntity As Integer, ByVal bSelect As Integer) As Integer

  Public Declare Function CmdRedraw Lib "Litecad.dll" Alias "lcCmdRedraw" (ByVal hCmd As Integer) As Integer

  Public Declare Function CmdSetFocus Lib "Litecad.dll" Alias "lcCmdSetFocus" (ByVal hCmd As Integer) As Integer

  Public Declare Function CmdRegen Lib "Litecad.dll" Alias "lcCmdRegen" (ByVal hCmd As Integer, ByVal hEnt As Integer) As Integer

  Public Declare Function CmdClearPoints Lib "Litecad.dll" Alias "lcCmdClearPoints" (ByVal hCmd As Integer) As Integer

  Public Declare Function CmdAddPoint Lib "Litecad.dll" Alias "lcCmdAddPoint" (ByVal hCmd As Integer, ByVal Id As Integer, ByVal X As Double, ByVal Y As Double) As Integer

  Public Declare Function CmdGetPoint Lib "Litecad.dll" Alias "lcCmdGetPoint" (ByVal hCmd As Integer, ByVal Id As Integer, ByRef pX As Double, ByRef pY As Double) As Integer

  Public Declare Function CmdSetBasePoint Lib "Litecad.dll" Alias "lcCmdSetBasePoint" (ByVal hCmd As Integer, ByVal bEnable As Integer, ByVal X As Double, ByVal Y As Double) As Integer
